csrc/tests/codegen_probes/errors/err_gosub_in_sub.bas
' REJECT: GOSUB inside a SUB/FUNCTION scope.
' zxbparser p_goto_part:1360 "GOSUB not allowed within SUB or FUNCTION".
Sub s
  GoSub 100
End Sub
s()
100 Print 1
